# vendor-aml-commonlib

./: .gitignore
aml_audio_clock_sync/: Makefile  README.md  S99aml_audio_clock_sync  aml_hw_file.c  aml_hw_file.h  aml_mixer_alsa.c  aml_mixer_alsa.h  main.c  mixer.c  mixer.h
aml_dbus/: Makefile  aml-dbus-generator.h  aml-dbus.c  aml-dbus.h  sample-client.c  sample-server.c
aml_deviceproperty/: Makefile  aml_device_property.c  aml_device_property.h  test_device.properties  test_property.c
aml_dtv_test/: CMakeLists.txt  channel_search.cpp  cmd_process.cpp  main_dtv_testserver.cpp  play_video.cpp  program_analysis.cpp  signal_status.cpp  util.cpp
aml_dtv_test/include/: channel_search.h  cmd_process.h  play_video.h  program_analysis.h  signal_status.h  util.h
aml_log/: Android.mk  Makefile  aml_log.c  aml_log.h
aml_property_server/: Makefile  makefile.inc
aml_socketipc/: Android.mk  Makefile  aml_socketipc.c  aml_socketipc.h
aml_socketipc_v2/: Makefile  timing_diagram.md
aml_wpa_wifi_util/: Makefile  aml_wpa_wifi_test_demo.c  aml_wpa_wifi_util.c  aml_wpa_wifi_util.h
bootloader_message/: Makefile  avb_crc32.c  bootloader_avb.c  bootloader_message.c  bootloader_message.h  test.c  urlmisc.c
fota/: dmgr_api.h
libatrace/: Makefile  atrace.c  atrace.h  atrace_cmd.cpp
libbinder/: Makefile  Makefile.roku  libbinder.mk
liblog/: Makefile  event_tag_map.c  fake_log_device.c  logd_write.c  logprint.c
logcat/: Makefile  logcat_test.c
logwrapper/: Makefile  logwrapper.cpp
ubootenv/: Makefile  ubootenv.c  ubootenv.h  uenv_test.c
utils/: Makefile  ioctl.c  (+12 more)
(+93 files in other folders)
